--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "serve": "node server.js"
+    "serve": "node server.js",
+    "prod": "node server.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.7.0",
