--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "prod": "node server.js"
   },
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
+    "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/styles": "^4.6.0",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/styles": "^4.9.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-stylus": "^1.0.1",
