--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-stylus": "^1.0.1",
+    "axios": "*",
     "bootstrap": "^4.3.1",
     "clsx": "^1.0.4",
     "cookie": "^0.4.0",
