--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "serve": "node server.js",
-    "prod": "corss-env NODE_ENV=production node server.js"
+    "prod": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.5",
