--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "global": "^4.4.0",
     "http-proxy-middleware": "^0.20.0",
     "isomorphic-unfetch": "^3.0.0",
+    "jquery": "^3.4.1",
     "less": "^3.10.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
