--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-stylus": "^1.0.1",
-    "axios": "*",
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "clsx": "^1.0.4",
     "cookie": "^0.4.0",
     "global": "^4.4.0",
-    "http-proxy-middleware": "^0.20.0",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^3.4.1",
     "less": "^3.10.3",
@@ -48,9 +47,11 @@
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "http-proxy-middleware": "^0.20.0",
     "path-match": "^1.2.4"
   }
 }
